        PR c/10175         * jump.c (never_reached_warning): Revert patch of 2002-11-02.         Look backwards for a line note.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65227 138bc75d-0d04-0410-961f-82ee72b054a4